--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -173,6 +173,7 @@
   <ItemGroup>
     <ClInclude Include="CameraEnterExit.h" />
     <ClInclude Include="CameraMovement.h" />
+    <ClInclude Include="DialogueManager.h" />
     <ClInclude Include="Effect.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="EnemyManager.h" />
@@ -197,6 +198,7 @@
   <ItemGroup>
     <ClCompile Include="CameraEnterExit.cpp" />
     <ClCompile Include="CameraMovement.cpp" />
+    <ClCompile Include="DialogueManager.cpp" />
     <ClCompile Include="Effect.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="EnemyManager.cpp" />
