--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -64,6 +64,9 @@
     <ClCompile Include="EventManager.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
+    <ClCompile Include="DialogueManager.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CameraEnterExit.h">
@@ -130,6 +133,9 @@
       <Filter>Scripts</Filter>
     </ClInclude>
     <ClInclude Include="EventManager.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="DialogueManager.h">
       <Filter>Scripts</Filter>
     </ClInclude>
   </ItemGroup>
