--- a/The Witcher/CoreData/Configuration/Subtitles/Project_1.json
+++ b/The Witcher/CoreData/Configuration/Subtitles/Project_1.json
@@ -1,35 +1,1 @@
-{
-    "file": "2_YessicaServinV2.mov",
-    "pos": 0,
-    "name": "Project 1",
-    "fps": 23.976,
-    "type": "DISC",
-    "id": "5e8397b014324220f48b59",
-    "titles": [
-        {
-            "s": 0,
-            "e": 7883,
-            "t": "Ehhh Hola soy yessica I os voy a decir lo guapos que sois",
-            "id": 3,
-            "tB": "",
-            "a": "",
-            "r": "",
-            "o": false,
-            "al": "center",
-            "vl": "bottom"
-        },
-        {
-            "s": 8050,
-            "e": 20062,
-            "t": "Ehh bueno pues lo que decia muy guaois",
-            "id": 4,
-            "tB": "",
-            "a": "",
-            "r": "",
-            "o": false,
-            "al": "center",
-            "vl": "bottom"
-        }
-    ],
-    "audiobufferGenerate": false
-}
+{"file":"Dialogue3.wav","pos":2,"name":"Project 3","fps":0,"type":"DISC","id":"5e8397b01432422099aceb","titles":[{"s":574,"e":3546,"t":"The duo had overtaken the forest beast.","id":3,"class":"new-title","tB":"","a":"","r":"","o":false,"al":"center","vl":"bottom"},{"s":3713,"e":7717,"t":"Inconsequentially, since Ciri evaporated into nothingness.","id":4,"class":"new-title","tB":"","a":"","r":"","o":false,"al":"center","vl":"bottom"},{"s":7883,"e":10428,"t":"The flame had awaken in her.","id":5,"class":"new-title","tB":"","a":"","r":"","o":false,"al":"center","vl":"bottom"},{"s":10594,"e":14390,"t":"The girl, as mistress Yennefer once told me, was a Source,","id":6,"class":"new-title","tB":"","a":"","r":"","o":false,"al":"center","vl":"bottom"},{"s":14557,"e":18561,"t":"a magical vessel irremediably susceptible to Chaos,","id":7,"class":"new-title","tB":"","a":"","r":"","o":false,"al":"center","vl":"bottom"},{"s":18728,"e":22732,"t":"an ancient force that slipped into our domains in the Conjunction of the Spheres.","id":8,"class":"new-title","tB":"","a":"","r":"","o":false,"al":"center","vl":"bottom"},{"s":23274,"e":27570,"t":"Their ambitions of tracing Ciri were focused on fissures","id":9,"class":"new-title","tB":"","a":"","r":"","o":false,"al":"center","vl":"bottom"},{"s":27737,"e":30031,"t":"amidst worlds caused by her travel,","id":10,"class":"new-title","tB":"","a":"","r":"","o":false,"al":"center","vl":"bottom"},{"s":30364,"e":30823,"t":"which","id":11,"class":"new-title","tB":"","a":"","r":"","o":false,"al":"center","vl":"bottom"},{"s":31032,"e":35036,"t":"fortunately, Yennefer could detect effortlessly","id":12,"class":"new-title","tB":"","a":"","r":"","o":false,"al":"center","vl":"bottom"}],"audiobufferGenerate":false}
