--- a/The Witcher/CoreData/Configuration/Layouts/Default.ini
+++ b/The Witcher/CoreData/Configuration/Layouts/Default.ini
@@ -80,33 +80,33 @@ Collapsed=0
 
 [Window][Configuration]
 Pos=1434,84
-Size=486,464
+Size=486,933
 Collapsed=0
-DockId=0x0000000F,2
+DockId=0x00000003,2
 
 [Window][Console]
-Pos=0,712
-Size=1432,299
+Pos=0,716
+Size=1432,301
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Render Options]
 Pos=1434,84
-Size=486,464
+Size=486,933
 Collapsed=0
-DockId=0x0000000F,1
+DockId=0x00000003,1
 
 [Window][Panel Hierarchy]
 Pos=0,84
-Size=224,626
+Size=224,630
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Inspector]
 Pos=1434,84
-Size=486,464
+Size=486,933
 Collapsed=0
-DockId=0x0000000F,0
+DockId=0x00000003,0
 
 [Window][Test]
 Pos=60,60
@@ -115,12 +115,12 @@ Collapsed=0
 
 [Window][DockSpace BackGround]
 Pos=0,0
-Size=1920,1011
+Size=1920,1017
 Collapsed=0
 
 [Window][Scene]
 Pos=226,84
-Size=1206,626
+Size=1206,630
 Collapsed=0
 DockId=0x00000009,0
 
@@ -134,16 +134,16 @@ Size=565,398
 Collapsed=0
 
 [Window][Project]
-Pos=0,712
-Size=1432,299
+Pos=0,716
+Size=1432,301
 Collapsed=0
 DockId=0x00000006,1
 
 [Window][Game]
-Pos=1434,550
-Size=486,461
+Pos=226,84
+Size=1206,630
 Collapsed=0
-DockId=0x00000012,0
+DockId=0x00000009,2
 
 [Window][## Camera options]
 Pos=0,19
@@ -164,14 +164,14 @@ Collapsed=0
 DockId=0x00000009,2
 
 [Window][Animation Timeline]
-Pos=0,712
-Size=1432,299
+Pos=0,716
+Size=1432,301
 Collapsed=0
 DockId=0x00000006,2
 
 [Window][Animator]
 Pos=226,84
-Size=1206,626
+Size=1206,630
 Collapsed=0
 DockId=0x00000009,1
 
@@ -186,7 +186,7 @@ Size=192,134
 Collapsed=0
 
 [Docking][Data]
-DockSpace                 ID=0x81802EEE Window=0xF3A9BAEC Pos=0,48 Size=1920,992 Split=Y
+DockSpace                 ID=0x81802EEE Window=0xF3A9BAEC Pos=0,42 Size=1920,998 Split=Y
   DockNode                ID=0x00000010 Parent=0x81802EEE SizeRef=1600,52 HiddenTabBar=1 Selected=0x063B9A85
   DockNode                ID=0x00000011 Parent=0x81802EEE SizeRef=1600,764 Split=Y
     DockNode              ID=0x0000000D Parent=0x00000011 SizeRef=1200,45 HiddenTabBar=1 Selected=0x76AC6852
@@ -197,12 +197,10 @@ DockSpace                 ID=0x81802EEE Window=0xF3A9BAEC Pos=0,48 Size=1920,992
             DockNode      ID=0x00000004 Parent=0x0000000B SizeRef=836,631 Split=Y
               DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=547,414 Split=X Selected=0x876DFDF0
                 DockNode  ID=0x00000001 Parent=0x00000007 SizeRef=224,631 Selected=0x876DFDF0
-                DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=919,631 CentralNode=1 Selected=0x18B8C0DE
+                DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=919,631 CentralNode=1 Selected=0x83199EB2
               DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=547,215 Selected=0x169CEE22
             DockNode      ID=0x0000000A Parent=0x0000000B SizeRef=362,631 Selected=0xF02CD328
           DockNode        ID=0x0000000C Parent=0x00000005 SizeRef=355,631 Selected=0xF02CD328
-        DockNode          ID=0x00000006 Parent=0x00000002 SizeRef=1200,246 Selected=0xE00EE972
-      DockNode            ID=0x00000003 Parent=0x0000000E SizeRef=389,631 Split=Y Selected=0xF02CD328
-        DockNode          ID=0x0000000F Parent=0x00000003 SizeRef=486,464 Selected=0xF02CD328
-        DockNode          ID=0x00000012 Parent=0x00000003 SizeRef=486,461 Selected=0x83199EB2
+        DockNode          ID=0x00000006 Parent=0x00000002 SizeRef=1200,246 Selected=0xF9BEF62A
+      DockNode            ID=0x00000003 Parent=0x0000000E SizeRef=389,631 Selected=0xF02CD328
 
