--- a/The Witcher/CoreData/Configuration/Subtitles/Project_1.json
+++ b/The Witcher/CoreData/Configuration/Subtitles/Project_1.json
@@ -1,1 +1,215 @@
-{"file":"Joined_Audios.mp3","pos":0,"name":"Intro_Dialogue_Subtitles","fps":0,"type":"DISC","id":"5e85c46868e604117a1bd0b","titles":[{"s":516,"e":6965,"t":"“The ballad I, Jaskier, <br>the most eminent bard in the continent, am about to conceive,","id":3,"tB":"","a":"","r":"","o":false,"al":"center","vl":"bottom"},{"s":7559,"e":10800,"t":"was explained to me by means of its own protagonists,","id":4,"tB":"","a":"","r":"","o":false,"al":"center","vl":"bottom"},{"s":11135,"e":17540,"t":"the mighty witcher Geralt of Rivia and <br>the venerable sorceress Yennefer of Vengerberg,","id":5,"tB":"","a":"","r":"","o":false,"al":"center","vl":"bottom"},{"s":17949,"e":22774,"t":"and thus I will endeavour to convey it <br>without any sight of embellishment”","id":6,"tB":"","a":"","r":"","o":false,"al":"center","vl":"bottom"},{"s":23733,"e":27343,"t":"“Geralt and Yennefer had just found their lovely puppy Cirilla","id":7,"tB":"","a":"","r":"","o":false,"al":"center","vl":"bottom"},{"s":27530,"e":31499,"t":"they decided to train her in Kaer Morhen  <br> while they left me,","id":8,"tB":"","a":"","r":"","o":false,"al":"center","vl":"bottom"},{"s":31613,"e":32281,"t":"Jaskier,","id":9,"tB":"","a":"","r":"","o":false,"al":"center","vl":"bottom"},{"s":32438,"e":34860,"t":"the most eminent bard in the continent,","id":10,"tB":"","a":"","r":"","o":false,"al":"center","vl":"bottom"},{"s":34900,"e":38210,"t":"singing for coin in the muddy streets of a filthy suburb…”","id":19,"tB":"","a":"","r":"","o":false,"al":"center","vl":"bottom"},{"s":38950,"e":42709,"t":"“Though, anyways, Ciri’s magical power and training","id":11,"tB":"","a":"","r":"","o":false,"al":"center","vl":"bottom"},{"s":42749,"e":46513,"t":"proceeded as prosperously as Geralt and Yennefer’s <br>  bonds with the child,","id":12,"tB":"","a":"","r":"","o":false,"al":"center","vl":"bottom"},{"s":46553,"e":50743,"t":"so the two of them decided to send her <br> in an equally prosperous adventure in the woods","id":13,"tB":"","a":"","r":"","o":false,"al":"center","vl":"bottom"},{"s":51046,"e":52991,"t":"where she would finish her tuition.","id":14,"tB":"","a":"","r":"","o":false,"al":"center","vl":"bottom"},{"s":53399,"e":54944,"t":"Unanticipatedly, it turned out","id":15,"tB":"","a":"","r":"","o":false,"al":"center","vl":"bottom"},{"s":54984,"e":59255,"t":"sending a pubescent girl into dangerous woods alone<br>while she discovers","id":16,"tB":"","a":"","r":"","o":false,"al":"center","vl":"bottom"},{"s":59295,"e":63456,"t":"unprecedented magical potential was indeed <br>not the most brilliant idea.","id":17,"tB":"","a":"","r":"","o":false,"al":"center","vl":"bottom"},{"s":63533,"e":70089,"t":"The lovely child unleashed not-so-lovely <br>magic pulses in an horrific thunder”","id":18,"tB":"","a":"","r":"","o":false,"al":"center","vl":"bottom"}],"audiobufferGenerate":false}
+{
+    "file": "Joined_Audios.mp3",
+    "pos": 0,
+    "name": "Intro_Dialogue_Subtitles",
+    "fps": 0,
+    "type": "DISC",
+    "id": "5e85c46868e604117a1bd0b",
+    "titles": [
+        {
+            "s": 516,
+            "e": 6965,
+            "t": "“The ballad I, Jaskier, the most eminent bard in the continent, am about to conceive,",
+            "id": 3,
+            "tB": "",
+            "a": "",
+            "r": "",
+            "o": false,
+            "al": "center",
+            "vl": "bottom"
+        },
+        {
+            "s": 7559,
+            "e": 10800,
+            "t": "was explained to me by means of its own protagonists,",
+            "id": 4,
+            "tB": "",
+            "a": "",
+            "r": "",
+            "o": false,
+            "al": "center",
+            "vl": "bottom"
+        },
+        {
+            "s": 11135,
+            "e": 17540,
+            "t": "the mighty witcher Geralt of Rivia and the venerable sorceress Yennefer of Vengerberg,",
+            "id": 5,
+            "tB": "",
+            "a": "",
+            "r": "",
+            "o": false,
+            "al": "center",
+            "vl": "bottom"
+        },
+        {
+            "s": 17949,
+            "e": 22774,
+            "t": "and thus I will endeavour to convey it without any sight of embellishment”",
+            "id": 6,
+            "tB": "",
+            "a": "",
+            "r": "",
+            "o": false,
+            "al": "center",
+            "vl": "bottom"
+        },
+        {
+            "s": 23733,
+            "e": 27343,
+            "t": "“Geralt and Yennefer had just found their lovely puppy Cirilla",
+            "id": 7,
+            "tB": "",
+            "a": "",
+            "r": "",
+            "o": false,
+            "al": "center",
+            "vl": "bottom"
+        },
+        {
+            "s": 27530,
+            "e": 31499,
+            "t": "they decided to train her in Kaer Morhen   while they left me,",
+            "id": 8,
+            "tB": "",
+            "a": "",
+            "r": "",
+            "o": false,
+            "al": "center",
+            "vl": "bottom"
+        },
+        {
+            "s": 31613,
+            "e": 32281,
+            "t": "Jaskier,",
+            "id": 9,
+            "tB": "",
+            "a": "",
+            "r": "",
+            "o": false,
+            "al": "center",
+            "vl": "bottom"
+        },
+        {
+            "s": 32438,
+            "e": 34860,
+            "t": "the most eminent bard in the continent,",
+            "id": 10,
+            "tB": "",
+            "a": "",
+            "r": "",
+            "o": false,
+            "al": "center",
+            "vl": "bottom"
+        },
+        {
+            "s": 34900,
+            "e": 38210,
+            "t": "singing for coin in the muddy streets of a filthy suburb…”",
+            "id": 19,
+            "tB": "",
+            "a": "",
+            "r": "",
+            "o": false,
+            "al": "center",
+            "vl": "bottom"
+        },
+        {
+            "s": 38950,
+            "e": 42709,
+            "t": "“Though, anyways, Ciri’s magical power and training",
+            "id": 11,
+            "tB": "",
+            "a": "",
+            "r": "",
+            "o": false,
+            "al": "center",
+            "vl": "bottom"
+        },
+        {
+            "s": 42749,
+            "e": 46513,
+            "t": "proceeded as prosperously as Geralt and Yennefer’s   bonds with the child,",
+            "id": 12,
+            "tB": "",
+            "a": "",
+            "r": "",
+            "o": false,
+            "al": "center",
+            "vl": "bottom"
+        },
+        {
+            "s": 46553,
+            "e": 50743,
+            "t": "so the two of them decided to send her  in an equally prosperous adventure in the woods",
+            "id": 13,
+            "tB": "",
+            "a": "",
+            "r": "",
+            "o": false,
+            "al": "center",
+            "vl": "bottom"
+        },
+        {
+            "s": 51046,
+            "e": 52991,
+            "t": "where she would finish her tuition.",
+            "id": 14,
+            "tB": "",
+            "a": "",
+            "r": "",
+            "o": false,
+            "al": "center",
+            "vl": "bottom"
+        },
+        {
+            "s": 53399,
+            "e": 54944,
+            "t": "Unanticipatedly, it turned out",
+            "id": 15,
+            "tB": "",
+            "a": "",
+            "r": "",
+            "o": false,
+            "al": "center",
+            "vl": "bottom"
+        },
+        {
+            "s": 54984,
+            "e": 59255,
+            "t": "sending a pubescent girl into dangerous woods alonewhile she discovers",
+            "id": 16,
+            "tB": "",
+            "a": "",
+            "r": "",
+            "o": false,
+            "al": "center",
+            "vl": "bottom"
+        },
+        {
+            "s": 59295,
+            "e": 63456,
+            "t": "unprecedented magical potential was indeed not the most brilliant idea.",
+            "id": 17,
+            "tB": "",
+            "a": "",
+            "r": "",
+            "o": false,
+            "al": "center",
+            "vl": "bottom"
+        },
+        {
+            "s": 63533,
+            "e": 70089,
+            "t": "The lovely child unleashed not-so-lovely magic pulses in an horrific thunder”",
+            "id": 18,
+            "tB": "",
+            "a": "",
+            "r": "",
+            "o": false,
+            "al": "center",
+            "vl": "bottom"
+        }
+    ],
+    "audiobufferGenerate": false
+}
