--- a/The Witcher/CoreData/Configuration/Subtitles/Project_1.json
+++ b/The Witcher/CoreData/Configuration/Subtitles/Project_1.json
@@ -1,15 +1,15 @@
 {
-    "file": "2_YessicaServinV2.mov",
+    "file": "Joined_Audios.mp3",
     "pos": 0,
-    "name": "Project 1",
-    "fps": 23.976,
+    "name": "Dialogue_Intro",
+    "fps": 0,
     "type": "DISC",
-    "id": "5e8397b014324220f48b59",
+    "id": "5e862572d4d8d1686b1b3ea",
     "titles": [
         {
-            "s": 0,
-            "e": 7883,
-            "t": "Ehhh Hola soy yessica I os voy a decir lo guapos que sois",
+            "s": 886,
+            "e": 7400,
+            "t": "The ballad I, Jaskier, the most \neminent bard in the continent, \nam about to conceive,",
             "id": 3,
             "tB": "",
             "a": "",
@@ -19,10 +19,190 @@
             "vl": "bottom"
         },
         {
-            "s": 8050,
-            "e": 20062,
-            "t": "Ehh bueno pues lo que decia muy guaois",
+            "s": 7510,
+            "e": 10818,
+            "t": "was explained to me by means of its own protagonists,",
             "id": 4,
+            "tB": "",
+            "a": "",
+            "r": "",
+            "o": false,
+            "al": "center",
+            "vl": "bottom"
+        },
+        {
+            "s": 10858,
+            "e": 17300,
+            "t": "the mighty witcher \nGeralt of Rivia and\nthe venerable sorceress \nYennefer of Vengerberg,",
+            "id": 5,
+            "tB": "",
+            "a": "",
+            "r": "",
+            "o": false,
+            "al": "center",
+            "vl": "bottom"
+        },
+        {
+            "s": 17442,
+            "e": 22726,
+            "t": "and thus I will endeavour to \nconvey itwithout any sight of \nembellishment",
+            "id": 6,
+            "tB": "",
+            "a": "",
+            "r": "",
+            "o": false,
+            "al": "center",
+            "vl": "bottom"
+        },
+        {
+            "s": 22766,
+            "e": 27640,
+            "t": "Geralt and Yennefer had just\nfound their lovely puppy Cirilla",
+            "id": 7,
+            "tB": "",
+            "a": "",
+            "r": "",
+            "o": false,
+            "al": "center",
+            "vl": "bottom"
+        },
+        {
+            "s": 27680,
+            "e": 31514,
+            "t": "they decided to train her \nin Kaer Morhen,\nwhile they left me,",
+            "id": 8,
+            "tB": "",
+            "a": "",
+            "r": "",
+            "o": false,
+            "al": "center",
+            "vl": "bottom"
+        },
+        {
+            "s": 31554,
+            "e": 32542,
+            "t": "Jaskier,",
+            "id": 9,
+            "tB": "",
+            "a": "",
+            "r": "",
+            "o": false,
+            "al": "center",
+            "vl": "bottom"
+        },
+        {
+            "s": 32582,
+            "e": 34751,
+            "t": "the most eminent bard \nin the continent,",
+            "id": 10,
+            "tB": "",
+            "a": "",
+            "r": "",
+            "o": false,
+            "al": "center",
+            "vl": "bottom"
+        },
+        {
+            "s": 34791,
+            "e": 38361,
+            "t": "singing for coin in the muddy \nstreets of a filthy suburb…",
+            "id": 11,
+            "tB": "",
+            "a": "",
+            "r": "",
+            "o": false,
+            "al": "center",
+            "vl": "bottom"
+        },
+        {
+            "s": 38801,
+            "e": 42617,
+            "t": "Though, anyways, Ciri’s magical power and training",
+            "id": 12,
+            "tB": "",
+            "a": "",
+            "r": "",
+            "o": false,
+            "al": "center",
+            "vl": "bottom"
+        },
+        {
+            "s": 42657,
+            "e": 46423,
+            "t": "proceeded as prosperously as \nGeralt and Yennefer’s \nbonds with the child,",
+            "id": 13,
+            "tB": "",
+            "a": "",
+            "r": "",
+            "o": false,
+            "al": "center",
+            "vl": "bottom"
+        },
+        {
+            "s": 46463,
+            "e": 50832,
+            "t": "so the two of them decided to \nsend her in an equally prosperous \nadventure in the woods",
+            "id": 14,
+            "tB": "",
+            "a": "",
+            "r": "",
+            "o": false,
+            "al": "center",
+            "vl": "bottom"
+        },
+        {
+            "s": 51228,
+            "e": 52874,
+            "t": "where she would finish\nher tuition.",
+            "id": 15,
+            "tB": "",
+            "a": "",
+            "r": "",
+            "o": false,
+            "al": "center",
+            "vl": "bottom"
+        },
+        {
+            "s": 53306,
+            "e": 54925,
+            "t": "Unanticipatedly, it turned out",
+            "id": 16,
+            "tB": "",
+            "a": "",
+            "r": "",
+            "o": false,
+            "al": "center",
+            "vl": "bottom"
+        },
+        {
+            "s": 54965,
+            "e": 58578,
+            "t": "sending a pubescent girl into \ndangerous woods alone\nwhile she discovers",
+            "id": 17,
+            "tB": "",
+            "a": "",
+            "r": "",
+            "o": false,
+            "al": "center",
+            "vl": "bottom"
+        },
+        {
+            "s": 58618,
+            "e": 63624,
+            "t": "unprecedented magical potential was indeed \nnot the most brilliant idea.",
+            "id": 18,
+            "tB": "",
+            "a": "",
+            "r": "",
+            "o": false,
+            "al": "center",
+            "vl": "bottom"
+        },
+        {
+            "s": 64341,
+            "e": 68235,
+            "t": "The lovely child unleashed \nnot-so-lovely magic pulse\nin an horrific thunder",
+            "id": 19,
             "tB": "",
             "a": "",
             "r": "",
