--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -201,6 +201,7 @@
     <ClInclude Include="Stat.h" />
     <ClInclude Include="Subtitle.h" />
     <ClInclude Include="TriggerMusicInteractive.h" />
+    <ClInclude Include="Trigger_Win.h" />
     <ClInclude Include="UI_Char_Frame.h" />
     <ClInclude Include="UI_EndMenu.h" />
     <ClInclude Include="UltiBar.h" />
@@ -240,6 +241,7 @@
     <ClCompile Include="Stat.cpp" />
     <ClCompile Include="Subtitle.cpp" />
     <ClCompile Include="TriggerMusicInteractive.cpp" />
+    <ClCompile Include="Trigger_Win.cpp" />
     <ClCompile Include="UI_Char_Frame.cpp" />
     <ClCompile Include="UI_EndMenu.cpp" />
     <ClCompile Include="UltiBar.cpp" />
