--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -113,6 +113,9 @@
     <ClCompile Include="TriggerMusicInteractive.cpp">
       <Filter>Scripts\Triggers</Filter>
     </ClCompile>
+    <ClCompile Include="Trigger_Win.cpp">
+      <Filter>Scripts\Triggers</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -228,6 +231,9 @@
       <Filter>Scripts\UI</Filter>
     </ClInclude>
     <ClInclude Include="TriggerMusicInteractive.h">
+      <Filter>Scripts\Triggers</Filter>
+    </ClInclude>
+    <ClInclude Include="Trigger_Win.h">
       <Filter>Scripts\Triggers</Filter>
     </ClInclude>
   </ItemGroup>
