--- a/The Witcher/CoreData/Configuration/Layouts/Default.ini
+++ b/The Witcher/CoreData/Configuration/Layouts/Default.ini
@@ -80,31 +80,31 @@ Collapsed=0
 
 [Window][Configuration]
 Pos=1590,84
-Size=330,933
+Size=330,927
 Collapsed=0
 DockId=0x00000003,2
 
 [Window][Console]
-Pos=0,748
-Size=1588,269
+Pos=0,744
+Size=1588,267
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Render Options]
 Pos=1590,84
-Size=330,933
+Size=330,927
 Collapsed=0
 DockId=0x00000003,1
 
 [Window][Panel Hierarchy]
 Pos=0,84
-Size=197,662
+Size=197,658
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Inspector]
 Pos=1590,84
-Size=330,933
+Size=330,927
 Collapsed=0
 DockId=0x00000003,0
 
@@ -115,14 +115,14 @@ Collapsed=0
 
 [Window][DockSpace BackGround]
 Pos=0,0
-Size=1920,1017
+Size=1920,1011
 Collapsed=0
 
 [Window][Scene]
 Pos=199,84
-Size=651,662
+Size=1389,658
 Collapsed=0
-DockId=0x0000000F,0
+DockId=0x00000009,0
 
 [Window][DockSpace Demo]
 Size=1200,650
@@ -134,16 +134,16 @@ Size=565,398
 Collapsed=0
 
 [Window][Project]
-Pos=0,748
-Size=1588,269
+Pos=0,744
+Size=1588,267
 Collapsed=0
 DockId=0x00000006,1
 
 [Window][Game]
-Pos=852,84
-Size=736,662
+Pos=199,84
+Size=1389,658
 Collapsed=0
-DockId=0x00000012,0
+DockId=0x00000009,2
 
 [Window][## Camera options]
 Pos=0,19
@@ -164,16 +164,16 @@ Collapsed=0
 DockId=0x00000009,2
 
 [Window][Animation Timeline]
-Pos=0,748
-Size=1588,269
+Pos=0,744
+Size=1588,267
 Collapsed=0
 DockId=0x00000006,2
 
 [Window][Animator]
 Pos=199,84
-Size=651,662
+Size=1389,658
 Collapsed=0
-DockId=0x0000000F,1
+DockId=0x00000009,1
 
 [Window][Physics]
 Pos=60,60
@@ -181,28 +181,26 @@ Size=81,54
 Collapsed=0
 
 [Window][Camera Selected Preview]
-Pos=1013,467
+Pos=1368,580
 Size=192,134
 Collapsed=0
 
 [Docking][Data]
-DockSpace                   ID=0x81802EEE Window=0xF3A9BAEC Pos=0,42 Size=1920,998 Split=Y
-  DockNode                  ID=0x00000010 Parent=0x81802EEE SizeRef=1600,52 HiddenTabBar=1 Selected=0x063B9A85
-  DockNode                  ID=0x00000011 Parent=0x81802EEE SizeRef=1600,764 Split=Y
-    DockNode                ID=0x0000000D Parent=0x00000011 SizeRef=1200,45 HiddenTabBar=1 Selected=0x76AC6852
-    DockNode                ID=0x0000000E Parent=0x00000011 SizeRef=1200,991 Split=X
-      DockNode              ID=0x00000002 Parent=0x0000000E SizeRef=1588,631 Split=Y
-        DockNode            ID=0x00000005 Parent=0x00000002 SizeRef=1200,662 Split=X
-          DockNode          ID=0x0000000B Parent=0x00000005 SizeRef=843,631 Split=X
-            DockNode        ID=0x00000004 Parent=0x0000000B SizeRef=836,631 Split=Y
-              DockNode      ID=0x00000007 Parent=0x00000004 SizeRef=547,414 Split=X Selected=0x876DFDF0
-                DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=197,631 Selected=0x876DFDF0
-                DockNode    ID=0x00000009 Parent=0x00000007 SizeRef=1389,631 Split=X Selected=0x18B8C0DE
-                  DockNode  ID=0x0000000F Parent=0x00000009 SizeRef=651,662 CentralNode=1 Selected=0x18B8C0DE
-                  DockNode  ID=0x00000012 Parent=0x00000009 SizeRef=736,662 Selected=0x83199EB2
-              DockNode      ID=0x00000008 Parent=0x00000004 SizeRef=547,215 Selected=0x169CEE22
-            DockNode        ID=0x0000000A Parent=0x0000000B SizeRef=362,631 Selected=0xF02CD328
-          DockNode          ID=0x0000000C Parent=0x00000005 SizeRef=355,631 Selected=0xF02CD328
-        DockNode            ID=0x00000006 Parent=0x00000002 SizeRef=1200,269 Selected=0xE00EE972
-      DockNode              ID=0x00000003 Parent=0x0000000E SizeRef=330,631 Selected=0xF02CD328
+DockSpace                 ID=0x81802EEE Window=0xF3A9BAEC Pos=0,48 Size=1920,992 Split=Y
+  DockNode                ID=0x00000010 Parent=0x81802EEE SizeRef=1600,52 HiddenTabBar=1 Selected=0x063B9A85
+  DockNode                ID=0x00000011 Parent=0x81802EEE SizeRef=1600,764 Split=Y
+    DockNode              ID=0x0000000D Parent=0x00000011 SizeRef=1200,45 HiddenTabBar=1 Selected=0x76AC6852
+    DockNode              ID=0x0000000E Parent=0x00000011 SizeRef=1200,991 Split=X
+      DockNode            ID=0x00000002 Parent=0x0000000E SizeRef=1588,631 Split=Y
+        DockNode          ID=0x00000005 Parent=0x00000002 SizeRef=1200,662 Split=X
+          DockNode        ID=0x0000000B Parent=0x00000005 SizeRef=843,631 Split=X
+            DockNode      ID=0x00000004 Parent=0x0000000B SizeRef=836,631 Split=Y
+              DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=547,414 Split=X Selected=0x876DFDF0
+                DockNode  ID=0x00000001 Parent=0x00000007 SizeRef=197,631 Selected=0x876DFDF0
+                DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=1389,631 CentralNode=1 Selected=0x83199EB2
+              DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=547,215 Selected=0x169CEE22
+            DockNode      ID=0x0000000A Parent=0x0000000B SizeRef=362,631 Selected=0xF02CD328
+          DockNode        ID=0x0000000C Parent=0x00000005 SizeRef=355,631 Selected=0xF02CD328
+        DockNode          ID=0x00000006 Parent=0x00000002 SizeRef=1200,269 Selected=0xE00EE972
+      DockNode            ID=0x00000003 Parent=0x0000000E SizeRef=330,631 Selected=0xF02CD328
 
