--- a/The Witcher/CoreData/Configuration/PhysicsSettings.json
+++ b/The Witcher/CoreData/Configuration/PhysicsSettings.json
@@ -1,3 +1,54 @@
 {
-    "Layers": []
+    "Layers": [
+        {
+            "Layer": "Default"
+        },
+        {
+            "Layer": "Wall"
+        },
+        {
+            "Layer": "Ground"
+        },
+        {
+            "Layer": "Player"
+        },
+        {
+            "Layer": "Enemy"
+        }
+    ],
+    "Default": {
+        "Default": true,
+        "Wall": true,
+        "Ground": true,
+        "Player": true,
+        "Enemy": true
+    },
+    "Wall": {
+        "Default": true,
+        "Wall": true,
+        "Ground": true,
+        "Player": true,
+        "Enemy": true
+    },
+    "Ground": {
+        "Default": true,
+        "Wall": true,
+        "Ground": true,
+        "Player": true,
+        "Enemy": true
+    },
+    "Player": {
+        "Default": true,
+        "Wall": true,
+        "Ground": true,
+        "Player": true,
+        "Enemy": true
+    },
+    "Enemy": {
+        "Default": true,
+        "Wall": true,
+        "Ground": true,
+        "Player": true,
+        "Enemy": true
+    }
 }
